- Make install fail for out of source build (Bug#19447498)
- Segmentation fault in retrieval of value using getter methods when 
  defaultstatementresulttype=forward_only and row position is after last row.
  (Bug#20085944)
- C/C++ should provide libmysqlclient and boost version macros with which
  it is build. (Bug#75250)
- C++11 support and replace deprecated auto_ptr. (Bug#75251)

GA  1.1.5 -
- DatabaseMetaData::getProcedures() returns syntax error for connection option
  metadatauseinfoschema=false (Bug#19505421)
- DatabaseMetaData::getColumns() returns empty resultset when
  metadataUseInfoSchema is true and for no schema. (Bug#19147897)
- ResultSetMetaData::getColumnName() returns display name instead of actual
  column name. (Bug#19244736)
- ResultSetMetaData::getTables() not returning result for VIEW when
  metadatauseinfoschema=false. (Bug#19505348)
- Version macros missing from installed headers file. (Bug#19553971)
- Getting multiple resultset from procedure using prepared statement gives
  error (Bug#19147677).
- Connection losses are not detected while fetching resultset using next()
  (Bug#18886278/69031).
- Remove boost variant from API (wl#7030)
- Make close() method or destructor of Connection object to always close
  the connection with server (wl#7028)
- Added max_statement_timeout and other connect options (MYSQL_DEFAULT_AUTH,
  MYSQL_PLUGIN_DIR, MYSQL_SET_CHARSET_DIR, MYSQL_READ_DEFAULT_FILE,
  MYSQL_READ_DEFAULT_GROUP, MYSQL_OPT_CONNECT_ATTR_DELETE,
  MYSQL_OPT_CONNECT_ATTR_RESET, MYSQL_OPT_LOCAL_INFILE) (Bug#19479950)
- Added missing sort order for DatabaseMetaData::getImportedKeys() and
  DatabaseMetaData::getIndexInfo() for no_i_s case. (Bug#19505248)
- There is no reconnection function in Connector/C++ (Bug#14207722)
- WB sends unnecessary COM_PING operations. (Bug#17186530)
- Double free or corruption error due to global extern string variable localhost 
  referenced at more then one places (Bug#19910311)